# rustfuzz

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  LICENSE  README.md  bench_fast.py  commit_code.sh  docs-nav-test.py  example_databricks_connect.py  example_pyspark.py  examples_realworld.py  examples_realworld_benchmark.py  fix_final_metrics.py  fix_metric_bounds.py  fix_missing_args.py  fix_regex_args.py  fix_types.py  index.html  inject_bounds.py  inject_final_final_fixes.py  inject_final_fixes.py  inject_fixes.py  inject_fuzz_bounds.py  inject_fuzz_raw.py  inject_l1.py  inject_loops.py  inject_metrics_bounds.py  inject_native.py  inject_owned.py  inject_prefilter.py  inject_rayon.py  inject_rayon_draft.py  inject_rayon_pipeline.py  inject_traits.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  (+2 more)
.agents/workflows/: push-to-main.md  research-build-test-benchmark.md
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_baseline.json  0002_baseline.json
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/external_review_sessions/ext_20260312_194516_998649ac/: canonical_import_20260312_194714.json  canonical_import_20260312_194916.json  canonical_import_20260312_194942.json  canonical_import_20260312_195025.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260312_200353_e7be5195/: canonical_import_20260312_200532.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260312_201822_e8b18256/: canonical_import_20260312_201935.json  canonical_import_20260312_202035.json  canonical_import_20260312_202147.json  canonical_import_20260312_202208.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260312_203424_e0a76749/: canonical_import_20260312_203549.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260312_203918_cbcc343a/: canonical_import_20260312_204054.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/review_packets/: holistic_packet_20260312_194516.json  holistic_packet_20260312_200353.json  holistic_packet_20260312_201822.json  holistic_packet_20260312_203424.json  holistic_packet_20260312_203918.json
.githooks/: pre-commit
.github/workflows/: branchbuild.yml  ci.yml  releasebuild.yml
architecture/: index.html
cookbook/01_introduction/: index.html
cookbook/02_advanced_matching/: index.html
cookbook/03_benchmarks/: index.html
cookbook/04_hybrid_search/: index.html
cookbook/05_langchain/: index.html
developer_guide/: index.html
docs/: architecture.md  architecture.mdx  developer-guide.mdx  developer_guide.md  index.md  introduction.mdx  mint.json
docs/cookbook/: 01_introduction.ipynb  01_introduction.md  02_advanced_matching.ipynb  02_advanced_matching.md  03_benchmarks.ipynb  03_benchmarks.md  04_hybrid_search.md  05_langchain.md  06_real_world.md  07_fuzzy_join.md  08_3way_hybrid_search.md  09_fastembed.md  10_filter_sort.md  11_embed_anything.md  12_retriever.md  advanced-matching.mdx  benchmarks.mdx  hybrid-search.mdx  introduction.mdx  langchain.mdx  real-world.mdx
docs/stylesheets/: extra.css
examples/: azure_retriever_example.py  bench_3stage_pipeline.py  bench_crush_ndcg.py  bench_retrieval.py  blazing_fast_pipeline.py  embed_anything_examples.py  fastembed_examples.py  filter_sort_examples.py  multijoiner_examples.py  quickstart.py
rapidfuzz/: __init__.py  fuzz.py  process.py  utils.py
rapidfuzz/distance/: DamerauLevenshtein.py  Hamming.py  Indel.py  Jaro.py  JaroWinkler.py  LCSseq.py  Levenshtein.py  OSA.py  Postfix.py  Prefix.py  __init__.py  _initialize.py
rustfuzz/: __init__.py  __init__.pyi  _rustfuzz.pyi  _types.py  compat.py  distance.pyi  document.py  engine.py  engine.pyi  filter.py  filter.pyi  fuzz.py  fuzz.pyi  join.py  join.pyi  langchain.py  process.py  process.pyi  query.py  search.py  search.pyi  sort.py  sort.pyi  spark.py  utils.py  utils.pyi
rustfuzz/distance/: DamerauLevenshtein.py  Gotoh.py  Gotoh.pyi  Hamming.py  Hamming.pyi  Indel.py  Indel.pyi  Jaro.py  Jaro.pyi  JaroWinkler.py  LCSseq.py  LCSseq.pyi  Levenshtein.py  NGram.py  NGram.pyi  OSA.py  OSA.pyi  Postfix.py  Postfix.pyi  Prefix.py  Soundex.py  Soundex.pyi  __init__.py  _initialize.py  _initialize.pyi
rustfuzz/lib_rustfuzz.dylib.dSYM/Contents/: Info.plist
rustfuzz/search/: __init__.py  _bm25.py  _helpers.py  _hybrid.py  _reranker.py  filter.py  query.py  sort.py
rustfuzz/tests/: test_hybrid_search_duplicates.py
search/: search_index.json
src/: algorithms.rs  fuzz.rs  join.rs  lib.rs  process.rs  search.rs  types.rs  utils.rs
src/distance/: bktree.rs  gotoh.rs  initialize.rs  metrics.rs  mod.rs  ngram.rs  phonetic.rs
src/rapidfuzz/: fuzz_cpp.py  process_cpp.py  utils_cpp.py
src/rapidfuzz/distance/: _initialize_cpp.py  metrics_cpp.py
tests/: bench_bigdata.py  bench_hybrid.py  bench_hybrid_filter_sort.py  bench_join.py  bench_scaling.py  test_basic.py  test_bayes_normalization.py  test_benchmarks.py  test_bktree.py  test_bm25_variants.py  test_compat.py  test_engine.py  test_filter_sort.py  test_gotoh.py  test_hybrid_search.py  test_hybrid_search_duplicates.py  test_join.py  test_langchain.py  test_metadata.py  test_ngram.py  test_phonetic.py  test_properties.py  test_reranker.py  test_search.py  test_search_features.py  test_spark.py
tools/: generate_notebooks.py  sdist.patch
