[package]
name = "rustfuzz"
version = "0.1.12"
edition = "2021"
description = "rapid fuzzy string matching"
license = "MIT"

[lib]
name = "_rustfuzz"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
rayon = "1.10"
mimalloc = { version = "0.1", default-features = false }
rustc-hash = "2.1"
charabia = "0.9.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
