[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "rustfuzz"
version = "0.1.20"
requires-python = ">= 3.10"
authors = [
  {name = "BM Suisse", email = "info@bmsuisse.com"},
]
description = "rapid fuzzy string matching"
readme = "README.md"
license = {text = "MIT"}
classifiers=[
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]
dependencies = []

[project.optional-dependencies]
polars = ["polars"]
pandas = ["pandas"]
arrow = ["pyarrow"]
spark = ["pyspark"]
embed = []
all = [
  "numpy",
  "polars",
  "pandas",
  "pyarrow",
]
[dependency-groups]
dev = [
  "maturin>=1.9,<2",
  "pytest>=8.0",
  "hypothesis>=6.0",
  "basedpyright>=1.27.1",
  "ruff>=0.9",
  "pytest-benchmark>=5.2.3",
  "rapidfuzz>=3.0.0",
  "numpy",
  "rank-bm25>=0.2.2",
  "pydantic>=2.0.0",
  "langchain-core>=0.1.0",
  "polars",
  "pandas",
  "pyarrow",
  "faker>=40.5.1",
  "matplotlib>=3.10.8",
  "requests>=2.32.5",
  "tqdm>=4.67.3",
]
docs = [
  "zensical",
  "jupyter",
  "plotly",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/bmsuisse/rustfuzz"
Documentation = "https://bmsuisse.github.io/rustfuzz"
Repository = "https://github.com/bmsuisse/rustfuzz.git"
Issues = "https://github.com/bmsuisse/rustfuzz/issues"

[tool.maturin]
python-source = "."
module-name = "rustfuzz._rustfuzz"
features = ["pyo3/extension-module"]





[tool.basedpyright]
include = ["rustfuzz"]
exclude = ["rustfuzz/spark.py", "rustfuzz/compat.py", ".venv", "tests", "examples", "docs", "examples_*.py", "bench_*.py"]
pythonVersion = "3.10"
reportAny = "none"
reportExplicitAny = "none"
reportImplicitOverride = "none"
reportUnusedImport = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"

[tool.ruff]
target-version = "py310"
src = ["."]
exclude = ["examples", "docs"]

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "UP",          # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]
"*.pyi" = ["E501"]
